# gLauncher

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: REQUIREMENTS.md
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/config/: mod.rs  schema.rs
src/core/: mod.rs
src/core/asset/: mod.rs
src/core/auth/: manager.rs  microsoft.rs  mod.rs  offline.rs
src/core/fabric/: mod.rs
src/core/forge/: mod.rs
src/core/instance/: mod.rs
src/core/java/: mod.rs
src/core/launch/: mod.rs  runner.rs
src/core/mods/: mod.rs
src/core/update/: mod.rs
src/core/version/: details.rs  mod.rs
src/gui/: app.rs  mod.rs
src/util/: download.rs  hash.rs  mod.rs
