[package]
name = "glauncher"
version = "0.1.0"
edition = "2024"
description = "Lightweight, customizable Minecraft Java Edition launcher"
authors = ["guraman"]
license = "MIT"
repository = "https://github.com/guraman/gLauncher"

[dependencies]
# GUI
eframe = "0.29"
egui = "0.29"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Security - OS keychain
keyring = "3.6"

# Auto-update
self_update = { version = "0.41", features = ["rustls"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Path handling
dirs = "5.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# SHA1 verification
sha1 = "0.10"

# Zip extraction (for natives)
zip = "2.2"

# Open URL in browser
open = "5.3"

# Glob patterns
glob = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
